--- a/.github/workflows/windows-installer.yml
+++ b/.github/workflows/windows-installer.yml
@@ -9,7 +9,7 @@ on:
       version:
         description: 'Version string (e.g. 0.3.0)'
         required: false
-        default: '0.3.0'
+        default: '0.5b'
 
 env:
   CONAN_VER: "2.12"
